# pr2_android_utilities

./: CMakeLists.txt  README  build.gradle  package.xml  settings.gradle  stack.xml
pr2_android_core_components/: build.gradle  project.properties
pr2_android_core_components/src/com/ros/pr2/apps/core_components/: Pr2Dashboard.java
pr2_android_core_components/src/main/: AndroidManifest.xml
pr2_android_core_components/src/main/java/com/ros/pr2/apps/core_components/: Pr2Dashboard.java
pr2_core_components/: AndroidManifest.xml  manifest.xml
pr2_core_components/src/com/ros/pr2/apps/core_components/: Pr2Dashboard.java
